--- a/third.html
+++ b/third.html
@@ -154,7 +154,7 @@
 </div>
 
 <!-- vr -->
-<div class="container d-flex qwas">
+<div class="container d-flex plays__flex">
     
   <div class="plays ">
         <div class="plays__cont">
