--- a/index.html
+++ b/index.html
@@ -203,18 +203,19 @@
          <img src="img/Airpods1.svg" alt="Airpods" class="info__card-img">
     </div></div>
     <div class="info__card">
-<div class="info__block">
+      <div class="info__block">
       <span class="info__card-disc">-20%</span>
 
       <div class="info__card-inf">
 
         <h3 class="info__card-title">Xiaomi Mi Power Bank 2s 10000</h3>
 
-        <p class="info__card-text">9$</p>
+        <p class="info__card-text">11$</p>
 
-      </div></div>
+      </div>
          <img src="img/Powerbank.png" alt="Powerbank" class="info__card-img">
        </div>
+      </div>
     <div class="info__card">
       <div class="info__block">
       <span class="info__card-disc">-10%</span>
@@ -227,7 +228,8 @@
 
       </div>
          <img src="img/Remax.png" alt="Remax" class="info__card-img">
-       </div></div>
+       </div>
+      </div>
 
        
       </div>
